@@ -11,8 +11,8 @@
     "FontConfig",
     "HarfBuzz:ver<0.0.11+>",
     "HarfBuzz::Font::Cairo",
-    "IETF::RFC_Grammar::URI",
-    "Text::FriBidi"
+    "Text::FriBidi",
+    "URI"
   ],
   "description": "Pod rendering via Cairo to PDF",
   "license": "Artistic-2.0",
@@ -20,6 +20,7 @@
   "perl": "6.d",
   "provides": {
     "Pod::To::Cairo": "lib/Pod/To/Cairo.rakumod",
+    "Pod::To::Cairo::Linker": "lib/Pod/To/Cairo/Linker.rakumod",
     "Pod::To::Cairo::Style": "lib/Pod/To/Cairo/Style.rakumod",
     "Pod::To::Cairo::TextChunk": "lib/Pod/To/Cairo/TextChunk.rakumod",
     "Pod::To::PDF": "lib/Pod/To/PDF.rakumod"
