@@ -1,0 +1,19 @@
+class Pod::To::Cairo::Linker {
+
+    use URI;
+    use IETF::RFC_Grammar::URI;
+
+    method extension { 'pdf' }
+    method resolve-link(Str $link) {
+        if IETF::RFC_Grammar::URI.parse($link) {
+            my URI() $uri = $link;
+            if $uri.is-relative && $uri.path.segments.tail && ! $uri.path.segments.tail.contains('.') {
+                $uri.path($uri.path ~ '.' ~ $.extension);
+            }
+            $uri.Str;
+        }
+        else {
+            Str
+        }
+    }
+}
